--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "hapidemo",
   "version": "1.0.0",
   "description": "Restful API demo using Hapi framework",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
-    "hapi": "^16.1.0"
+    "handlebars": "^4.0.6",
+    "hapi": "^16.1.0",
+    "lodash.filter": "^4.6.0",
+    "lodash.take": "^4.1.1",
+    "request": "^2.79.0",
+    "vision": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
-} #
+  "author": "dennistouchet",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dennistouchet/hapidemo"
+  }
+}
